tests/neg/i11022.check
-- Error: tests/neg/i11022.scala:10:7 ----------------------------------------------------------------------------------
10 |val a: CaseClass = CaseClass(42)        // error: deprecated type // error: deprecated apply method
   |       ^^^^^^^^^
   |       class CaseClass is deprecated: no CaseClass
-- Error: tests/neg/i11022.scala:10:19 ---------------------------------------------------------------------------------
10 |val a: CaseClass = CaseClass(42)        // error: deprecated type // error: deprecated apply method
   |                   ^^^^^^^^^
   |                   class CaseClass is deprecated: no CaseClass
-- Error: tests/neg/i11022.scala:11:7 ----------------------------------------------------------------------------------
11 |val b: CaseClass = new CaseClass(42)    // error: deprecated type // error: deprecated class
   |       ^^^^^^^^^
   |       class CaseClass is deprecated: no CaseClass
-- Error: tests/neg/i11022.scala:11:23 ---------------------------------------------------------------------------------
11 |val b: CaseClass = new CaseClass(42)    // error: deprecated type // error: deprecated class
   |                       ^^^^^^^^^
   |                       class CaseClass is deprecated: no CaseClass
-- Error: tests/neg/i11022.scala:12:14 ---------------------------------------------------------------------------------
12 |val c: Unit = CaseClass(42).magic()     // error: deprecated apply method
   |              ^^^^^^^^^
   |              class CaseClass is deprecated: no CaseClass
